Connector 응답 통합 개선